<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- artboard_5 strings -->

	<string name="app_name">Artboard 5</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="enter_mobile_number_to_continue_string">Enter mobile number to continue</string>
	<string name="what_s_your_number_string">Whats your number</string>
	<string name="_12_30_string">12:30</string>
	<string name="add_number_string">Add number</string>
	<string name="send_string">SEND</string>
	<string name="_1_string">1</string>
	<string name="_2_string">2</string>
	<string name="_3_string">3</string>
	<string name="___string">-</string>
	<string name="___ek1_string">.</string>
	<string name="_4_string">4</string>
	<string name="_5_string">5</string>
	<string name="_6_string">6</string>
	<string name="_7_string">7</string>
	<string name="___ek2_string">*</string>
	<string name="___ek3_string">#</string>
	<string name="_8_string">8</string>
	<string name="_0_string">0</string>
	<string name="___ek4_string">+</string>
	<string name="_9_string">9</string>
	<string name="_71_878_6729_string">71 878 6729</string>
	<string name="__94_string">+94</string>
</resources>