<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		artboard_5
	 *	@date 		0
	 *	@title 		Artboard 5
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/artboard_5" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="760dp" >

			<View android:id="@+id/_bg__artboard_5"
				android:background="@drawable/_bg__artboard_5_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<View android:id="@+id/rectangle_121"
				android:background="@drawable/rectangle_121_shape"
				 android:layout_marginLeft="2040dp"
				 android:layout_marginStart="2040dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<ImageView android:id="@+id/path_228"
				android:src="@drawable/path_228"
				android:contentDescription="path_228"
				 android:layout_marginLeft="2017.5dp"
				 android:layout_marginStart="2017.5dp"
				android:layout_marginTop="-7.5dp"
				android:layout_width="405dp"
				android:layout_height="357dp" />

			<TextView android:id="@+id/enter_mobile_number_to_continue"
				android:fontFamily="Roboto-Regular"
				android:textSize="16sp"
				android:textColor="@color/enter_mobile_number_to_continue_color"
				android:layout_marginLeft="2056dp"
				android:layout_marginTop="143.00024414062dp"
				android:layout_width="237dp"
				android:layout_height="22dp"
				android:text="@string/enter_mobile_number_to_continue_string"
				 />

			<TextView android:id="@+id/what_s_your_number"
				android:fontFamily="Roboto-Medium"
				android:textSize="24sp"
				android:textColor="@color/what_s_your_number_color"
				android:layout_marginLeft="2056dp"
				android:layout_marginTop="106.00024414062dp"
				android:layout_width="221dp"
				android:layout_height="37dp"
				android:text="@string/what_s_your_number_string"
				 />

			<View android:id="@+id/bg"
				android:background="@drawable/bg_shape"
				 android:layout_marginLeft="2040dp"
				 android:layout_marginStart="2040dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="80dp" />

			<View android:id="@+id/bg_ek1"
				android:background="@drawable/bg_ek1_shape"
				 android:layout_marginLeft="2040dp"
				 android:layout_marginStart="2040dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="24dp" />

			<TextView android:id="@+id/_12_30"
				android:fontFamily="Roboto-Regular"
				android:textSize="13sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2359dp"
				android:layout_marginTop="5dp"
				android:layout_width="37dp"
				android:layout_height="18dp"
				android:text="@string/_12_30_string"
				 />


			<RelativeLayout android:id="@+id/battery"
				android:layout_marginTop="5dp"
				android:layout_marginStart="2342dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_229"
					android:src="@drawable/path_229"
					android:contentDescription="path_229"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="8dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_122"
					android:background="@drawable/rectangle_122_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="7dp"
					android:layout_width="8dp"
					android:layout_height="6dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/network"
				android:layout_marginTop="6dp"
				android:layout_marginStart="2316dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_230"
					android:src="@drawable/path_230"
					android:contentDescription="path_230"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="6dp"
					android:layout_width="6dp"
					android:layout_height="5.96875dp" />

				<ImageView android:id="@+id/path_231"
					android:src="@drawable/path_231"
					android:contentDescription="path_231"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="12.062744140625dp"
					android:layout_height="12dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/wifi"
				android:layout_marginTop="5dp"
				android:layout_marginStart="2289dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/group_156"
					android:src="@drawable/group_156"
					android:contentDescription="group_156"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="18dp"
					android:layout_height="14dp" />

			</RelativeLayout>

			<TextView android:id="@+id/add_number"
				android:fontFamily="Roboto-Medium"
				android:textSize="20sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2112dp"
				android:layout_marginTop="37dp"
				android:layout_width="117dp"
				android:layout_height="31dp"
				android:text="@string/add_number_string"
				 />

			<ImageView android:id="@+id/space"
				android:src="@drawable/space"
				android:contentDescription="space"
				 android:layout_marginLeft="2056dp"
				 android:layout_marginStart="2056dp"
				android:layout_marginTop="40dp"
				android:layout_width="24dp"
				android:layout_height="24dp" />

			<ImageView android:id="@+id/icon"
				android:src="@drawable/icon"
				android:contentDescription="icon"
				 android:layout_marginLeft="2060dp"
				 android:layout_marginStart="2060dp"
				android:layout_marginTop="44dp"
				android:layout_width="16dp"
				android:layout_height="16dp" />

			<View android:id="@+id/bg_ek2"
				android:background="@drawable/bg_ek2_shape"
				 android:layout_marginLeft="2290dp"
				 android:layout_marginStart="2290dp"
				android:layout_marginTop="252dp"
				android:layout_width="94dp"
				android:layout_height="36dp" />

			<TextView android:id="@+id/send"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="14sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2316.7551269531dp"
				android:layout_marginTop="260dp"
				android:layout_width="41dp"
				android:layout_height="22dp"
				android:text="@string/send_string"
				 />

			<View android:id="@+id/bg_ek3"
				android:background="@drawable/bg_ek3_shape"
				 android:layout_marginLeft="2040dp"
				 android:layout_marginStart="2040dp"
				android:layout_marginTop="492dp"
				android:layout_width="360dp"
				android:layout_height="220dp" />

			<TextView android:id="@+id/_1"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2078.65234375dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_1_string"
				 />

			<TextView android:id="@+id/_2"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2169.4348144531dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_2_string"
				 />

			<TextView android:id="@+id/_3"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2260.2172851562dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_3_string"
				 />

			<TextView android:id="@+id/__"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2351.5217285156dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="12dp"
				android:layout_height="34dp"
				android:text="@string/___string"
				 />

			<TextView android:id="@+id/___ek1"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2351.5217285156dp"
				android:layout_marginTop="566.99975585938dp"
				android:layout_width="11dp"
				android:layout_height="34dp"
				android:text="@string/___ek1_string"
				 />

			<TextView android:id="@+id/_4"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2078.65234375dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_4_string"
				 />

			<TextView android:id="@+id/_5"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2169.4348144531dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_5_string"
				 />

			<TextView android:id="@+id/_6"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2260.2172851562dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_6_string"
				 />

			<TextView android:id="@+id/_7"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2078.65234375dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_7_string"
				 />

			<TextView android:id="@+id/___ek2"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2068.7392578125dp"
				android:layout_marginTop="673.39190673828dp"
				android:layout_width="15dp"
				android:layout_height="34dp"
				android:text="@string/___ek2_string"
				 />

			<TextView android:id="@+id/___ek3"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2086.7392578125dp"
				android:layout_marginTop="674.6962890625dp"
				android:layout_width="20dp"
				android:layout_height="34dp"
				android:text="@string/___ek3_string"
				 />

			<TextView android:id="@+id/_8"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2169.4348144531dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_8_string"
				 />

			<TextView android:id="@+id/_0"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2158.2172851562dp"
				android:layout_marginTop="674.69659423828dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_0_string"
				 />

			<TextView android:id="@+id/___ek4"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2178.5651855469dp"
				android:layout_marginTop="674.69659423828dp"
				android:layout_width="19dp"
				android:layout_height="34dp"
				android:text="@string/___ek4_string"
				 />

			<TextView android:id="@+id/_9"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/_12_30_color"
				android:layout_marginLeft="2260.2172851562dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_9_string"
				 />

			<ImageView android:id="@+id/delete"
				android:src="@drawable/delete"
				android:contentDescription="delete"
				 android:layout_marginLeft="2342.2170410156dp"
				 android:layout_marginStart="2342.2170410156dp"
				android:layout_marginTop="624dp"
				android:layout_width="24dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/space_ek1"
				android:src="@drawable/space_ek1"
				android:contentDescription="space_ek1"
				 android:layout_marginLeft="2231dp"
				 android:layout_marginStart="2231dp"
				android:layout_marginTop="675dp"
				android:layout_width="70dp"
				android:layout_height="24dp" />


			<RelativeLayout android:id="@+id/group_157"
				android:layout_marginTop="663dp"
				android:layout_marginStart="2330.2172851562dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/bg_ek4"
					android:background="@drawable/bg_ek4_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="36dp"
					android:layout_height="36dp" />

				<ImageView android:id="@+id/path_233"
					android:src="@drawable/path_233"
					android:contentDescription="path_233"
					 android:layout_marginLeft="16dp"
					 android:layout_marginStart="16dp"
					android:layout_marginTop="13dp"
					android:layout_width="6.47314453125dp"
					android:layout_height="10.982055664062dp" />

			</RelativeLayout>

			<View android:id="@+id/bg_ek5"
				android:background="@drawable/bg_ek5_shape"
				 android:layout_marginLeft="2040dp"
				 android:layout_marginStart="2040dp"
				android:layout_marginTop="712dp"
				android:layout_width="360dp"
				android:layout_height="48dp" />

			<ImageView android:id="@+id/recent"
				android:src="@drawable/recent"
				android:contentDescription="recent"
				 android:layout_marginLeft="2312dp"
				 android:layout_marginStart="2312dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/home"
				android:src="@drawable/home"
				android:contentDescription="home"
				 android:layout_marginLeft="2211dp"
				 android:layout_marginStart="2211dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/hide"
				android:src="@drawable/hide"
				android:contentDescription="hide"
				 android:layout_marginLeft="2110.0131835938dp"
				 android:layout_marginStart="2110.0131835938dp"
				android:layout_marginTop="727dp"
				android:layout_width="18.979736328125dp"
				android:layout_height="16.994018554688dp" />

			<View android:id="@+id/input"
				android:background="@drawable/input_shape"
				 android:layout_marginLeft="2056dp"
				 android:layout_marginStart="2056dp"
				android:layout_marginTop="227dp"
				android:layout_width="70dp"
				android:layout_height="1dp" />

			<View android:id="@+id/input_ek1"
				android:background="@drawable/input_ek1_shape"
				 android:layout_marginLeft="2142dp"
				 android:layout_marginStart="2142dp"
				android:layout_marginTop="227dp"
				android:layout_width="242dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/_71_878_6729"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/what_s_your_number_color"
				android:layout_marginLeft="2142dp"
				android:layout_marginTop="199dp"
				android:layout_width="93dp"
				android:layout_height="24dp"
				android:text="@string/_71_878_6729_string"
				 />

			<TextView android:id="@+id/__94"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/what_s_your_number_color"
				android:layout_marginLeft="2056dp"
				android:layout_marginTop="199dp"
				android:layout_width="34dp"
				android:layout_height="24dp"
				android:text="@string/__94_string"
				 />

			<ImageView android:id="@+id/icon_ek1"
				android:src="@drawable/icon_ek1"
				android:contentDescription="icon_ek1"
				 android:layout_marginLeft="2099dp"
				 android:layout_marginStart="2099dp"
				android:layout_marginTop="208dp"
				android:layout_width="8dp"
				android:layout_height="5dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>